--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
-Hello World!
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="app.css">
+    <link rel="shortcut icon" href="/favicon.ico"> -->
+	<title>Yassine Belcaid</title>
+</head>
+<body>
+	<header>
+		<a href="/">Yassine Belcaid</a> &lt;yassine.belcaid(at)gmail(dot)com&gt;
+	</header>
+	<section>
+		<ul id="social-links">
+			<li><a href="https://github.com/yassineb">Github</a></li>
+			<li><a href="https://ma.linkedin.com/in/yassinebelcaid">LinkedIn</a></li>
+			<li><a href="https://www.facebook.com/Bec0de">Facebook</a></li>
+		</ul>
+	</section>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+	  ga('create', 'UA-63790019-1', 'auto');
+	  ga('send', 'pageview');
+	</script>
+
+</body>
+</html>
