--- a/index.html
+++ b/index.html
@@ -3,19 +3,20 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="app.css">
-    <link rel="shortcut icon" href="/favicon.ico"> -->
+    <link rel="stylesheet" type="text/css" href="css/app.css">
+    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+    <!-- <link rel="shortcut icon" href="/favicon.ico"> -->
 	<title>Yassine Belcaid</title>
 </head>
 <body>
 	<header>
-		<a href="/">Yassine Belcaid</a> &lt;yassine.belcaid(at)gmail(dot)com&gt;
+		<a href="/" class="title">Yassine Belcaid</a> <small>yassine.belcaid{at}gmail{dot}com</small>
 	</header>
 	<section>
 		<ul id="social-links">
-			<li><a href="https://github.com/yassineb">Github</a></li>
-			<li><a href="https://ma.linkedin.com/in/yassinebelcaid">LinkedIn</a></li>
-			<li><a href="https://www.facebook.com/Bec0de">Facebook</a></li>
+			<li><a href="https://github.com/yassineb" target="_blank"><i title="Github" class="fa fa-github"></i></a></li>
+			<li><a href="https://ma.linkedin.com/in/yassinebelcaid" target="_blank"><i title="LinkedIn" class="fa fa-linkedin"></i></a></li>
+			<li><a href="https://www.facebook.com/Bec0de" target="_blank"><i title="Facebook" class="fa fa-facebook"></i></a></li>
 		</ul>
 	</section>
 	<script>
