--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/app.css">
-    <link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
-    <!-- <link rel="shortcut icon" href="/favicon.ico"> -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" type="text/css" href="css/app.css">
+	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<link rel="shortcut icon" href="/favicon.ico">
 	<title>Yassine Belcaid</title>
 </head>
 <body>
@@ -15,7 +15,7 @@
 	<section>
 		<ul id="social-links">
 			<li><a href="https://github.com/yassineb" target="_blank"><i title="Github" class="fa fa-github"></i></a></li>
-			<li><a href="https://ma.linkedin.com/in/yassinebelcaid" target="_blank"><i title="LinkedIn" class="fa fa-linkedin"></i></a></li>
+			<li><a href="https://www.linkedin.com/in/yassinebelcaid" target="_blank"><i title="LinkedIn" class="fa fa-linkedin"></i></a></li>
 			<li><a href="https://www.facebook.com/Bec0de" target="_blank"><i title="Facebook" class="fa fa-facebook"></i></a></li>
 		</ul>
 	</section>
